# whedcapp

./: .gitignore  CODE_OF_CONDUCT.md  README.md
licenses/: README.md
server/: README.md  build.gradle  settings.gradle
server/common_build_functions/: common_build_functions.gradle
server/crudGenTool/: README.md
server/crud_gen_tool/: build.gradle
server/crud_gen_tool/src/: CMakeLists.txt  column.hh  common.cc  common.hh  configuration.cc  configuration.hh  driver.cc  driver.hh  genConfig.cc  genConfig.hh  generatorProto.cc  generatorProto.hh  generatorSql.cc  generatorSql.hh  identity.cc  identity.hh  igenerator.cc  igenerator.hh  options.cc  options.hh  parse.cc  partialCrudGenConfig.h.in  partialSql.l  partialSql.y  reference.hh  relationalOperator.cc  relationalOperator.hh  table.cc  table.hh  tableSpecItem.cc  tableSpecItem.hh  type.cc  type.hh
server/database/: README.md  build.gradle
server/database/src/: 08192_dbDef.sql.in  12288_dbBaseStoredProcedures.sql  config.cs  dbBaseStoredProcedures.sql  dbCrudCfg.cs  dbDef.sql  dbDef.sql.in
server/test/: build.gradle  test.robot
server/test/Resources/Keywords/: DatabaseKeywords.txt.in
server/test/Resources/Lib/: GlobalLibrary.txt.in  augmentable_csv_reader.py
server/test/Resources/Variables/: DatabaseVariables.txt.in  GlobalVariables.txt.in
server/test/database/: test_uid.rst
server/test/database/single_table/00000000000001_test_uid_table/: 001_create_single_valid_users_as_administrator.robot  002_duplicate_single_valid_users_as_administrator.robot  003_update_single_valid_users_as_administrator.robot  004_update_single_valid_users_incorrectly_as_administrator.robot  005_update_single_valid_users_incorrectly_with_identity_as_administrator.robot  006_incorrectly_try_to_delete_whedcapp_administrator_as_administrator.robot  011_create_single_valid_users_as_administrator_using_other_domain.robot  (+3 more)
(+28 files in other folders)
